tests/typing/errors/useless_patterns/error_1.ae

type t =
    A of {a : int}
  | B of { b : real}

goal g_invalid:
  forall x : t.
    match x with
    | v -> 1
    | A(y) -> 1
    end <= 2
